--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -54,7 +54,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>A computer will check an if statement for truth if false it shall either cease to deploy code or move on the the next statement in an else if</li>
+        <li>Arrays are useful tools for storing multiple items with different data types in a single variable, but not all arrays must have multiple data types</li>
       </ul>
    
       </section>
